# schelling

./: Manifest.toml  Project.toml  README.md  cells_out.txt  haskell_schelling.hs  plot_start_and_finish.jl  schelling.jl  schelling_withhaskell.jl  shelling.cabal
