cabal-version:   3.12
name:            shelling
version:         0.1.0.0
license:         NONE
author:          akince22
maintainer:      akince22@itu.edu.tr
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable shelling
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:    
        base ^>=4.18.3.0,
        vector
